--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -14,7 +14,7 @@ PROG = box_multimedia
 #
 # Fichiers sources (NE PAS METTRE les .h ni les .o seulement les .cpp)
 #
-SOURCES = mediaObject.cpp photoObject.cpp videoObject.cpp main.cpp
+SOURCES = main.cpp mediaObject.cpp photoObject.cpp videoObject.cpp filmObject.cpp
 
 #
 # Fichiers objets (ne pas modifier sauf si l'extension n'est pas .cpp)
