--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -47,6 +47,7 @@
         "typeinfo": "cpp",
         "fstream": "cpp",
         "sstream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "map": "cpp"
     }
 }
